--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export(calc_graph_dist)
 exportMethods(calc_graph_dist)
 importClassesFrom(Seurat,seurat)
+importFrom(Barycenter,Sinkhorn)
 importFrom(BiocNeighbors,findKNN)
 importFrom(BiocParallel,SerialParam)
 importFrom(RBGL,johnson.all.pairs.sp)
+importFrom(Rfast,mat.mult)
+importFrom(Rfast,transpose)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,GetDimReduction)
 importFrom(SingleCellExperiment,reducedDim)
