--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(predict_expr_loc)
 importFrom(Barycenter,Sinkhorn)
 importFrom(BiocNeighbors,findKNN)
 importFrom(BiocParallel,SerialParam)
+importFrom(Matrix,rowMeans)
+importFrom(Matrix,t)
 importFrom(RBGL,johnson.all.pairs.sp)
 importFrom(dplyr,filter)
 importFrom(ggplot2,aes)
